# cortex-context-fabric

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  hive-mind.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.cursor/rules/: hive-mind.mdc
docs/: OPERATIONS.md
infra/compose/: docker-compose.yml
infra/ollama/: entrypoint.sh  healthcheck.sh
infra/otel/: otel-collector.yaml
infra/postgres/: Dockerfile
infra/postgres/init/: 010_extensions.sql  020_catalog.sql  030_audit.sql  040_graph.sql  090_grants.sql
openspec/: project.md
openspec/changes/add-admin-vector-and-content/: tasks.md
openspec/changes/add-foundation/: .openspec.yaml  README.md  design.md  proposal.md  tasks.md
openspec/changes/add-knowledge-graph/: tasks.md
openspec/changes/bootstrap-thin-mvp/: .openspec.yaml  README.md  design.md  proposal.md  tasks.md
openspec/changes/fix-code-graph-filename-leak/: tasks.md
openspec/changes/stabilize-full-smoke/: tasks.md
services/admin-ui/: Dockerfile  next.config.mjs  package.json  tsconfig.json
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/src/hive_mind_ingestion/: __init__.py  chunking.py  cli.py  graph_writer.py  pipeline_runner.py  runs.py  server.py
services/ingestion/src/hive_mind_ingestion/connectors/: git.py
services/ingestion/tests/: test_chunking.py  test_cli.py  test_git_connector.py  test_graph_writer.py  test_runs.py  test_server.py
services/mcp-server/: Dockerfile  package.json
services/pipeline/: Dockerfile  pyproject.toml
services/pipeline/src/hive_mind_pipeline/: __init__.py  admin_routes.py  app.py  providers.py  util.py
services/pipeline/src/hive_mind_pipeline/stages/: assemble.py  hybrid_retrieval.py  identity.py
services/pipeline/src/hive_mind_pipeline/storage/: audit.py  catalog.py  vector.py
services/pipeline/tests/: test_admin_routes.py  test_assemble.py  test_catalog.py  test_providers.py  test_rrf.py  test_smoke_chat_stub.py  test_smoke_script_config.py  test_util.py  test_vector_search_all.py
tests/smoke/: run.sh
(+93 files in other folders)
