[project]
name = "hive-mind-ingestion"
version = "0.0.0"
description = "Hive Mind ingestion connectors (thin MVP: git only)."
requires-python = ">=3.12"
dependencies = [
  "hive-mind-shared",
  "asyncpg>=0.30",
  "qdrant-client>=1.12",
  "httpx>=0.27",
  "click>=8.1",
  # Code-side ingestion: graphifyy provides language-aware file discovery
  # (collect_files) + tree-sitter symbol extraction (extract). See
  # openspec/changes/adopt-graphifyy/ for the contract.
  "graphifyy>=0.8,<0.9",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
]

[project.scripts]
hive-mind-ingest = "hive_mind_ingestion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hive_mind_ingestion"]
